Fix hierarchy line wraping under .list element

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,15 +73,19 @@ body{
     }
 
     .folder{
-
         
         position: relative;
         list-style: none;
         cursor: pointer;
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: 0.2rem max-content;
+        grid-template-rows: max-content max-content;
+        
+        
         
         .folder-title{
+            
+            grid-column : 1/-1;
             order : 0;
             width: 100%;
             display: flex;
@@ -92,21 +96,25 @@ body{
                 width : 25px;
                 height: 25px;
             }
+        
        
         }
         .list{
             margin-top : 0;
-            order : 2;        
+            order : 2;  
+        
+            
         }
         &.collasped > .list{
             display: none;
         }
 
         &::before{
+            
             order : 1;
             content : "";
             width: 10px;
-            align-self: stretch;
+            
             
             border-right : 2px solid black;
         }
